<resources>
    <string name="app_name">Fast Math Trainer</string>

    <!-- main menu -->
    <string name="title">Fast Math Trainer!</string>
    <string name="title1">Welcome to</string>
    <string name="instructions">You can do it!</string>
    <string name="addition">Addition</string>
    <string name="subtraction">Subtraction</string>
    <string name="multiplication">Multiplication</string>
    <string name="division">Division</string>
    <string name="combination">Random</string>
    <string name="settings">Settings</string>
    <string name="savedSettings">Saved!</string>

    <!-- settings menu -->
    <string name="currentmode">Game mode</string>
    <string name="timed">Timed</string>
    <string name="practice">Practice</string>
    <string name="difficulty">Difficulty</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="duration">Timed Game Length</string>
    <string name="fifteen">15s</string>
    <string name="thirty">30s</string>
    <string name="fortyfive">45s</string>
    <string name="fifteenQuestions">15</string>
    <string name="thirtyQuestions">30</string>
    <string name="fortyFiveQuestions">45</string>
    <string name="practicequestionstext">Practice Questions</string>

    <!-- math cards -->
    <string name="equation">%1s</string>
    <string name="timertext">%.2f</string>
    <string name="score">%1s</string>

    <!-- winning screen -->
    <string name="results">Results</string>
    <string name="resultsBoldItalic"><![CDATA[<i><b>Results</i></b>]]> </string>
    <string name="message">&lt;u>%1s&lt;/u> problems</string>
    <string name="messageLineTwo">in &lt;u>%ls&lt;/u> seconds.</string>
    <string name="totalscoretext">Total Score:</string>
    <string name="totalscorebanner">Total Score: &lt;u>%ls&lt;/u></string>
    <string name="totalscore">&lt;u>%ls&lt;/u></string>
    <string name="newhighscore">%ls</string>
    <string name="reset">Start Over</string>
    <string name="menu">Main Menu</string>

    <!-- num pad -->
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="clear">Clear</string>
    <string name="backarrow">◄</string>
    <string name="back">Back</string>
    <string name="title_activity_base">BaseActivity</string>
</resources>
