<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="#82c4dd">
    tools:context="com.minton.fastmathtrainer.MathCardsActivity">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".4"
        android:orientation="horizontal"
        android:background="#82c4dd">

        <TextView
            android:id="@+id/equation"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="top|center"
            android:keepScreenOn="true"
            android:text="@string/equation"
            android:textColor="#FFFFFF"
            android:textSize="100sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".25"
        android:orientation="horizontal"
        android:background="#82c4dd">

        <TextView
            android:id="@+id/answer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="top|center"
            android:keepScreenOn="true"
            android:text="@string/equation"
            android:textColor="#FFFFFF"
            android:textSize="60sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".75"
        android:orientation="horizontal"
        android:background="#82c4dd">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:stretchColumns="*"
            android:weightSum="4" >

            <TableRow android:layout_weight="1" >
                <Button
                    android:id="@+id/one"
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    android:layout_marginLeft="5dp"
                    android:background="@drawable/mybutton"
                    android:text="@string/one"
                    android:textColor="#2e355b"
                    android:textSize="40sp"/>
                <Button
                    android:id="@+id/two"
                    android:layout_toRightOf="@+id/one"
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    android:layout_marginLeft="1dp"
                    android:layout_marginRight="1dp"
                    android:background="@drawable/mybutton"
                    android:text="@string/two"
                    android:textColor="#2e355b"
                    android:textSize="40sp"/>
                <Button
                    android:id="@+id/three"
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    android:layout_marginRight="5dp"
                    android:background="@drawable/mybutton"
                    android:text="@string/three"
                    android:textColor="#2e355b"
                    android:textSize="40sp"/>
            </TableRow>

            <TableRow android:layout_weight="1" >
                <Button
                    android:id="@+id/four"
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    android:layout_marginLeft="5dp"
                    android:background="@drawable/mybutton"
                    android:text="@string/four"
                    android:textColor="#2e355b"
                    android:textSize="40sp"/>
                <Button
                    android:id="@+id/five"
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    android:layout_marginLeft="1dp"
                    android:layout_marginRight="1dp"
                    android:background="@drawable/mybutton"
                    android:text="@string/five"
                    android:textColor="#2e355b"
                    android:textSize="40sp"/>
                <Button
                    android:id="@+id/six"
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    android:layout_marginRight="5dp"
                    android:background="@drawable/mybutton"
                    android:text="@string/six"
                    android:textColor="#2e355b"
                    android:textSize="40sp"/>
            </TableRow>
            <TableRow android:layout_weight="1" >
                <Button
                    android:id="@+id/seven"
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    android:layout_marginLeft="5dp"
                    android:background="@drawable/mybutton"
                    android:text="@string/seven"
                    android:textColor="#2e355b"
                    android:textSize="40sp"/>

                <Button
                    android:id="@+id/eight"
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    android:layout_marginLeft="1dp"
                    android:layout_marginRight="1dp"
                    android:background="@drawable/mybutton"
                    android:text="@string/eight"
                    android:textColor="#2e355b"
                    android:textSize="40sp"/>

                <Button
                    android:id="@+id/nine"
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    android:layout_marginRight="5dp"
                    android:background="@drawable/mybutton"
                    android:text="@string/nine"
                    android:textColor="#2e355b"
                    android:textSize="40sp"/>
            </TableRow>
            <TableRow android:layout_weight="1" >
                <Button
                    android:id="@+id/clear"
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    android:layout_marginLeft="5dp"
                    android:background="@drawable/mybutton"
                    android:text="@string/clear"
                    android:textColor="#62e0d7"
                    android:textSize="40sp"/>
                <Button
                    android:id="@+id/zero"
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    android:layout_marginLeft="1dp"
                    android:layout_marginRight="1dp"
                    android:background="@drawable/mybutton"
                    android:text="@string/zero"
                    android:textColor="#2e355b"
                    android:textSize="40sp"/>
                <Button
                    android:id="@+id/back"
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    android:layout_marginRight="5dp"
                    android:background="@drawable/mybutton"
                    android:text="@string/back"
                    android:textColor="#FFFFFF"
                    android:textSize="40sp"/>
            </TableRow>
        </TableLayout>
    </LinearLayout>

</LinearLayout>
